k8s/manifests/overleaf/overleaf.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: overleaf
  name: overleaf
  namespace: overleaf
spec:
  replicas: 1
  serviceName: overleaf
  selector:
    matchLabels:
      app: overleaf
  template:
    metadata:
      labels:
        app: overleaf
    spec:
      containers:
        - name: overleaf
          image: sharelatex/sharelatex:4.2.0
          imagePullPolicy: IfNotPresent
          command:
            - init.sh
            - /sbin/my_init
          volumeMounts:
            - name: data
              mountPath: /var/lib/sharelatex
            - name: secrets
              mountPath: /secrets
            - name: overleaf-init
              mountPath: /usr/local/bin/init.sh
              subPath: init.sh
              readOnly: true
          resources:
            requests:
              cpu: 2000m
              memory: 1500Mi
            limits:
              cpu: 4000m
              memory: 3000Mi
      volumes:
        - name: secrets
          secret:
            secretName: overleaf-secrets
        - name: overleaf-init
          configMap:
            defaultMode: 504
            name: overleaf-init
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Delete
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOncePod
        storageClassName: iscsi-ssd-storage
        resources:
          requests:
            storage: 30Gi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: overleaf
  name: overleaf
  namespace: overleaf
spec:
  ports:
    - name: overleaf
      port: 80
      targetPort: 80
  selector:
    app: overleaf
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-overleaf
  namespace: overleaf
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - tex.akashisn.info
      secretName: overleaf-cert
  rules:
    - host: tex.akashisn.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: overleaf
                port:
                  name: overleaf
